--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxify",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "The simplest flux implementation",
   "homepage": "https://github.com/arqex/fluxify",
   "main": "fluxify.js",
@@ -28,6 +28,7 @@
     "es6-promise": "~2.0.0",
     "gulp-uglify": "~1.0.1",
     "gulp-rename": "~1.2.0",
-    "gulp-insert": "~0.4.0"
+    "gulp-insert": "~0.4.0",
+    "gulp": "~3.8.11"
   }
 }
